fix: overlapping slider nav (#226)

--- a/src/assets/scss/components/slider.scss
+++ b/src/assets/scss/components/slider.scss
@@ -11,11 +11,7 @@
         margin-block-start: -2rem;
         position: relative;
         z-index: 2;
-
-        .homepage & {
-            margin-top: -4rem;
-            margin-block-start: -4rem;
-        }
+        
     }
 
     .c-slider__paddleNav__prev,
